# test-snippets

./: CONTRIBUTING.md  README.md
cpp/: .gitignore  CMakeLists.txt  README.md  doxygen.config
cpp/cmake/: AddGoogleTest.cmake
cpp/src/main/snippets/system/: SystemTime.cpp  SystemTime.h  Time.h
cpp/src/test/examples/behavioural/: ATestBase.h  SampleBehaviouralTest.cpp
cpp/src/test/snippets/behavioural/: Steps.h
cpp/src/test/snippets/fixtures/: SimulatedTimeFixture.h
cpp/src/test/snippets/samples/: RandomSamples.cpp  RandomSamples.h
cpp/src/test/snippets/system/: SimulatedTime.h
dotnet/: TestSnippets.sln
dotnet/TestSnippets.Examples/: TestSnippets.Examples.csproj
dotnet/TestSnippets.Examples/Behavioural/: ATestBase.cs  SampleBehaviouralTest.cs
dotnet/TestSnippets.ForProduction/: TestSnippets.ForProduction.csproj
dotnet/TestSnippets.ForProduction/System/: ITime.cs  SystemTime.cs  Time.cs
dotnet/TestSnippets.ForTest/: TestSnippets.ForTest.csproj
dotnet/TestSnippets.ForTest/Behavioural/: Steps.cs
dotnet/TestSnippets.ForTest/Fixtures/: SimulatedTimeFixture.cs
dotnet/TestSnippets.ForTest/Samples/: RandomSamples.cs
dotnet/TestSnippets.ForTest/System/: SimulatedTime.cs
java/: pom.xml
java/src/main/java/publicdomain/test/snippets/system/: SystemTime.java  Time.java
java/src/test/java/publicdomain/test/examples/behavioural/: ATestBase.java  SampleBehaviouralTest.java
java/src/test/java/publicdomain/test/snippets/behavioural/: Steps.java
java/src/test/java/publicdomain/test/snippets/fixtures/: SimulatedTimeFixture.java
java/src/test/java/publicdomain/test/snippets/samples/: RandomSamples.java
(+1 files in other folders)
